# webtoon_ddalggak

./: .env.example  .gitignore  GossipToon_Architecture_Improvement_Tasks.md  ISSUE_PANEL_COUNT.md  Makefile  README.md  SKILLS.md  WORKLOG.md  Webtoon Storytelling for LLM Generation.docx  alembic.ini  dev.db  docker-compose.yml  example_story.md  implementation_doc_2.md  log  panel_design_solution.md  prompt_authority_tasks.md  pyproject.toml  temp.txt  test_bubble_opacity.py  validate_documentation.py  webtoon-forge-architecture.md
app/: main.py
docs/: 01-application-workflow.md  02-langgraph-architecture.md  03-prompt-system.md  04-database-models.md  05-character-system.md  06-artifact-system.md  07-configuration-files.md  08-api-reference.md  09-error-handling-observability.md  AGENTS.md  CHAT_BUBBLE_CONFIG.md  LANGGRAPH_SYSTEM_DESIGN.md  OPACITY_FIX.md  README.md  api.md  bline_error.txt  character_reuse_epic.md  implementation_doc_1.md  implementation_doc_2.md  implementation_doc_3.md  langgraph_architecture.md  layout_pacing_solution.md  node_graph.md  observability.md  panel_issue.md  project_workflow.md  run_output.json  scene_prompt_example.md  suggested_solution.md  task_list_improvements.md  v4_agentic_story_architecture.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
scripts/: create_test_data.py  render_smoke.py
ssuljaengi_v4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_art_director.py  test_art_director_integration.py  test_casting.py  test_casting_utils.py  test_character_consistency.py  test_character_library.py  test_character_normalization.py  test_character_style_map.py  test_character_style_sanitization.py  test_cinematographer_layout_focus.py  test_config_loaders.py  test_crud_and_artifacts.py  test_debug_pipeline.py  test_dialogue_layer.py  test_environment_anchors.py  (+33 more)
(+274 files in other folders)
