[project]
name = "ssuljaengi_v4"
version = "0.1.0"
description = "Webtoon Scene Image Generator backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "google-cloud-aiplatform>=1.71.0",
  "google-genai>=0.3.0",
  "jinja2>=3.1",
  "langgraph>=0.2.0",
  "pillow>=10.0",
  "PyYAML>=6.0",
  "prometheus_client>=0.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.28.1",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.8",
]

telemetry = [
  "arize-phoenix>=4.0",
  "openinference-instrumentation-langchain>=0.1.0",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
anyio_mode = "auto"

[tool.mypy]
python_version = "3.11"

[tool.setuptools]
packages = ["app"]
